<resources>
    <string name="app_name">WHBC Confession of Faith</string>
    <string name="button1">The Scriptures</string>
    <string name="button2">The True God</string>
    <string name="button3">The Fall of Man</string>
    <string name="button4">The Way of Salvation</string>
    <string name="button5">Justification</string>
    <string name="button6">The Freeness of Salvation</string>
    <string name="button7">Grace in Regeneration</string>
    <string name="paragraph1">We believe that the Holy Bible was written by men divinely inspired, and is a perfect treasure of heavenly instruction; that it has God for its author, salvation for its end, and truth without any mixture of error for its matter; that it reveals the principles by which God will judge us; and therefore is, and shall remain to the end of the world, the true center of Christian union, and the supreme standard by which all human conduct, creeds, and opinions should be tried.</string>
    <string name="paragraph2">We believe that there is one, and only one, living and true God, an infinite, intelligent Spirit, whose name is JEHOVAH, the Maker and Supreme Ruler of Heaven and earth; inexpressibly glorious in holiness, and worthy of all possible honor, confidence, and love; that in the unity of the Godhead there are three persons, the Father, the Son, and the Holy Ghost; equal in every divine perfection, and executing distinct and harmonious offices in the great work of redemption.</string>
    <string name="paragraph3">We believe that man was created in holiness, under the law of his Maker; but by voluntary transgression fell from that holy and happy state; in consequence of which all mankind are now sinners, not by constraint, but choice; being by nature utterly void of that holiness required by the law of God, positively inclined to evil; and therefore under just condemnation to eternal ruin, without defense or excuse.</string>
</resources>
